fix: AI vocabulary 기반으로 동화 토큰 저장 로직 수정